<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_word_view" android:title="@string/action_word_view"
        android:orderInCategory="100" app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_word_search" android:title="@string/action_word_search"
        android:orderInCategory="100" app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_translate" android:title="@string/action_translate"
        android:orderInCategory="100" app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_sentence_view" android:title="@string/action_sentence_view"
        android:orderInCategory="100" app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_tts" android:title="@string/action_tts"
        android:orderInCategory="100" app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_tts_all" android:title="@string/action_tts_all"
        android:orderInCategory="100" app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_copy" android:title="@string/action_copy"
        android:orderInCategory="100" app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_all_copy" android:title="@string/action_all_copy"
        android:orderInCategory="100" app:showAsAction="ifRoom"/>
</menu>
